--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "aws-sdk": "^2.467.0",
     "body-parser": "^1.19.0",
+    "clean-css": "^4.2.1",
     "cookie-parser": "^1.4.4",
     "crypto-promise": "^2.1.0",
     "debug": "^2.6.9",
