--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
