--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
-    "promise-mysql": "^3.3.2"
+    "promise-mysql": "^3.3.2",
+    "rand-token": "^0.4.0"
   }
 }
